--- a/ansible/playbooks/all_hosts_playbook.yml
+++ b/ansible/playbooks/all_hosts_playbook.yml
@@ -1,4 +1,5 @@
 # Il primo set di tasks viene eseguito su tutti gli host, sia masters che workers.
+#source : https://kubernetes.io/blog/2019/03/15/kubernetes-setup-using-ansible-and-vagrant/
 - hosts: all
   # 'become: yes' permette di eseguire tutti i tasks come root.
   become: yes
