--- a/ansible/playbooks/master_playbook.yml
+++ b/ansible/playbooks/master_playbook.yml
@@ -8,3 +8,19 @@
       args:
         # Questa linea fa sì che il task venga saltato se il file /etc/kubernetes/admin.conf esiste già.
         creates: /etc/kubernetes/admin.conf
+        # Scarica lo script di installazione di Helm.
+    - name: Download Helm install script
+      get_url:
+        url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+        dest: /tmp/get_helm.sh
+        mode: '0700'
+
+    # Esegui lo script di installazione di Helm.
+    - name: Install Helm
+      command: /tmp/get_helm.sh
+
+    # Aggiungi il repository di Helm.
+    - name: Add Helm repository
+      command: helm repo add stable https://charts.helm.sh/stable
+      become: yes
+      become_user: root
